refactor(auth): JWT/Refresh Token 레이어 단순화
- JwtTokenClient / RefreshTokenStore Port 와 Adapter 제거
- 신규 JwtTokenProvider 를 domain/auth/jwt sub-package 에 배치, JwtProperties 도 동반 이동
- TokenIssueService/TokenRefreshService/LogoutService/TokenAuthenticationService 가 JwtTokenProvider 와 RefreshTokenRepository 를 직접 사용
- RefreshTokenEntity → RefreshToken 리네이밍, successor → child 용어 통일
- RefreshTokenRepository JPQL 에 신규 규칙 (alias full-name + leading comma) 적용
- @ConfigurationPropertiesScan 을 ReadumApplication 으로 이동 (JwtConfig 제거)
- AuthController 쿠키 파라미터에서 수동 null 체크 제거 (required 기본값 사용)

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>